--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -1,13 +1,8 @@
-.row {
-  clear: both;
-  width: 100%;
-  height: 100%;
-}
-
 .music_background {
   background: url("../images/music_bg2.jpg") no-repeat fixed top center;
   min-height: 550px;
   background-size: cover;
+  width: 100%;
 }
 
 .home_wrapper,
@@ -28,25 +23,25 @@
   font-size: 48px;
   line-height: 60px;
   text-align: left;
-  width: 600px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 50%;
 }
 .beat_search_form {
-  padding: 20px;
+  padding: 20px 0;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  width: 520px;
+  width: 50%;
 }
 
 .action_buttons {
   display: flex;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: center;
   padding: 20px 0;
-  width: 540px;
+  width: 100%;
 }
 .filled-solid-btn {
   padding: 20px;
@@ -66,6 +61,11 @@
   border: 1px solid var(--banger-yellow);
 }
 
+.filled-solid-btn,
+.filled-outline-btn {
+  text-align: center;
+}
+
 .filled-outline-btn {
   padding: 18px;
   border: 1px solid var(--banger-yellow);
@@ -80,6 +80,7 @@
 
 .filled-outline-btn:hover {
   background: var(--banger-yellow);
+  color: var(--banger-black);
 }
 .btn {
   margin-right: 20px;
@@ -88,14 +89,14 @@
 
 .process {
   display: flex;
-  padding: 40px;
+  padding: 20px;
   flex-wrap: wrap;
 }
 
 .process_wrapper {
   text-align: center;
   flex-grow: 1;
-  width: 25%;
+  width: 33.333%;
   padding: 20px;
 }
 
@@ -122,7 +123,6 @@
 }
 
 .heading_big_black_text {
-  align-self: center;
   color: white;
   font-weight: 600;
   font-size: 52px;
@@ -145,14 +145,20 @@
 
 .top_producers {
   background: #ffffff;
+  width: 100%;
+  min-height: 400px;
 }
 
 .beat_categories {
   background: #121213;
+  width: 100%;
+  min-height: 400px;
 }
 
 .type_beats {
   background: #0b0b0b;
+  width: 100%;
+  min-height: 400px;
 }
 
 .producer_wrapper ul {
@@ -254,18 +260,6 @@ div.large_heading {
   line-height: 30px;
 }
 
-.form-control {
-  display: block;
-  width: 100%;
-  height: 45px;
-  padding: 6px 12px;
-  font-size: 16px;
-  line-height: 1.6;
-  color: #555555;
-  background-color: #fff;
-  background-image: none;
-  border: 1px solid #bababa;
-  border-radius: 8px;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+.get_started {
+  justify-content: center;
 }
